<resources>
    <string name="app_name">Maximum Education</string>
    
<!--    Bottom Navigation-->
    <string name="shedule">Schedule</string>
    <string name="profile">Profile</string>

    <string name="login_text">Login</string>
    <string name="login_input_text">Email or phone number</string>
    <string name="password_input_text">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="restore_password">Restore password</string>
    <string name="new_user">New user?</string>
    <string name="create_account">Create account</string>
    <string name="change">Change</string>
    <string name="more_details">More details</string>
    <string name="practice">Practice</string>
    <string name="video">Video</string>
    <string name="theory">Theory</string>
    <string name="Settings">Settings</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="messages">Messages</string>
    <string name="soon_there_will_be_messages_from_you_classmates_and_teachers">Soon there will be messages from you classmates and teachers.</string>
    <string name="your_teacher">Your teacher</string>
    <string name="message">Write message</string>
    <string name="your_score_on_the_course">Your score on the course</string>
    <string name="points">points</string>

<!--    ToDoList Strings-->
    <string name="repeat">Repeat</string>
    <string name="prepare">Prepare</string>
    <string name="solved">Solved</string>
    <string name="lessons_number">Lesson</string>
    <string name="done_exercise">Done %1$d from %2$d</string>
    <string name="done_theory">Theory %1$d from %2$d</string>
    <string name="connect">Connect</string>
    <string name="online_lesson">Online-lesson</string>
    <string name="corrected_mistakes">Correct %1$d from %2$d</string>
    <string name="correct_mistakes">Correct mistakes</string>
    <string name="lefted_exercise">Left to resolve %1$d</string>

<!--    Lessons Strings-->
    <string name="lessons">Lessons:</string>
    <string name="address_line_with_subway">Address: subway: %1$s, %2$s</string>
    <string name="address_line">Address: %1$s</string>
    <string name="text_progress">Progress: %1$d</string>
    <string name="visit">Visit</string>
    <string name="not_visit">Not visit</string>
    <string name="webinar">Webinar</string>
    <string name="offline">Offline lesson</string>

<!--    Stats dialog-->
    <string name="your_progress">Your progress - %1$d</string>
    <string name="exercises_stats_text">Exercises:</string>
    <string name="theory_stats_text">Theory:</string>
    <string name="video_stats_text">Videos:</string>
    <string name="lessons_stats_text">Lessons:</string>
    <string name="items_count">%1$d from %2$d</string>
    <string name="done_button_text">Done</string>

<!--    AllTheoryList-->
    <string name="lesson_header_text">Lesson: %1$s</string>

<!--    Profile Screen-->
    <string name="your_score">Your score on the course</string>
    <string name="scores">scores</string>
    <string name="your_ranked">You are ranked %1$dth in the group</string>

<!--    Homework Screen-->
    <string name="practice_debts">Practice debts</string>
    <string name="push_and_close_debts">We need to push and close all the debts, and then you can watch TikTok.</string>
    <string name="total_debts">Total debts</string>
    <string name="exercise_title">Homework exercise (from %1$d)</string>
    <string name="tries_count_text">You have %1$d try</string>
    <string name="no_tries_left">No tries are left</string>
    <string name="showed_solution">You have seen the solution</string>
    <string name="answer">ANSWER</string>
    <string name="error">Error?</string>
    <string name="show_results_button_text">Show results</string>
    <string name="add_file">Add file</string>
    <string name="solution_steps">Solution steps</string>
    <string name="your_message">Your message</string>
    <string name="something_goes_wrong">Something goes wrong..</string>
</resources>