<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_begin="12dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="12dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/progressHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/your_progress"
        android:textSize="18sp"
        android:textColor="@color/light_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintTop_toBottomOf="@id/progressHeader"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        tools:progress="60"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exercisesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercises_stats_text"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/practice_icon"
        android:drawablePadding="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exercisesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/items_count"
        app:layout_constraintTop_toTopOf="@id/exercisesText"
        app:layout_constraintBottom_toBottomOf="@id/exercisesText"
        app:layout_constraintStart_toEndOf="@id/exercisesText"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginStart="8dp"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/theoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theory_stats_text"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/theory_icon"
        android:drawablePadding="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/exercisesText"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/theoryCount"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/theoryCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/items_count"
        app:layout_constraintTop_toTopOf="@id/theoryText"
        app:layout_constraintBottom_toBottomOf="@id/theoryText"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/exercisesCount"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/videoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_stats_text"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/video_icon"
        android:drawablePadding="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/theoryText"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/videoCount"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/videoCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/items_count"
        app:layout_constraintTop_toTopOf="@id/videoText"
        app:layout_constraintBottom_toBottomOf="@id/videoText"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/exercisesCount"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lessonsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lessons_stats_text"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/visited_lesson_icon"
        android:drawablePadding="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/videoText"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/lessonsCount"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lessonsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/items_count"
        app:layout_constraintTop_toTopOf="@id/lessonsText"
        app:layout_constraintBottom_toBottomOf="@id/lessonsText"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/exercisesCount"
        android:textSize="18sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:cornerRadius="60dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/lessonsText"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:text="@string/done_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>