<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/super_rect"
    android:elevation="2dp"
    android:layout_marginVertical="6dp"
    android:layout_marginHorizontal="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/repeatLayout"
        android:layout_width="match_parent"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/progress_bar_main"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_pin"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="8dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consolidate"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/light_gray"
                android:layout_marginTop="4dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/consolidateLessonNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessons_number"
                android:layout_marginBottom="4dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/consolidateCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_exercise"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/light_gray"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:rotation="180"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/connectLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:focusable="true"
        android:visibility="gone">

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/connect_green"
            android:layout_marginStart="1dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_connect"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="8dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/light_gray"
                android:layout_marginTop="4dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/connectLessonNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessons_number"
                android:layout_marginBottom="4dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_lesson"
            android:textSize="16sp"
            android:layout_marginEnd="4dp"
            android:textStyle="bold"
            android:textColor="@color/connect_green"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/connectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="20.05.2020 18:00"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/light_gray"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow"
            android:rotation="180"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/correctLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:focusable="true"
        android:visibility="gone">

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/mistakes_red"
            android:layout_marginStart="1dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_mistakes"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_mistakes"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/light_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/correctCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corrected_mistakes"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/light_gray"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow"
            android:rotation="180"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/practiceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:focusable="true"
        android:visibility="gone">

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/practice_gray"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_practice"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/practice"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/light_gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resolveCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lefted_exercise"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/light_gray"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow"
            android:rotation="180"
            android:layout_gravity="center"
            android:layout_margin="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>