<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/theoryTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/videoTxt"
        android:layout_marginEnd="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/theory_icon"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:textColor="@color/light_gray"
        android:text="@string/theory"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/theoryCountTxt"
        app:layout_constraintTop_toTopOf="@id/topicName"
        app:layout_constraintBottom_toBottomOf="@id/topicName"
        app:layout_constraintEnd_toStartOf="@id/videoTxt"
        android:layout_marginEnd="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/light_gray"
        android:text="0"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/videoTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/practiceTxt"
        android:layout_marginEnd="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        app:drawableStartCompat="@drawable/video_icon"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:text="@string/video"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/videoCountTxt"
        app:layout_constraintTop_toTopOf="@id/topicName"
        app:layout_constraintBottom_toBottomOf="@id/topicName"
        app:layout_constraintEnd_toStartOf="@id/practiceTxt"
        android:layout_marginEnd="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/light_gray"
        android:text="0"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/practiceTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        app:drawableStartCompat="@drawable/practice_icon"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:text="@string/practice"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/practiceCountTxt"
        app:layout_constraintTop_toTopOf="@id/topicName"
        app:layout_constraintBottom_toBottomOf="@id/topicName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        android:text="0"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topicName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/practiceTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/theoryTxt"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:textColor="@color/light_gray"
        tools:text="Симуляция марафона"/>

</androidx.constraintlayout.widget.ConstraintLayout>